--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
   "dependencies": {
     "axios": "0.26.0",
     "cors": "2.8.5",
-    "express": "4.17.3"
+    "express": "4.17.3",
+    "luxon": "^3.1.1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/BloomInstituteOfTechnology/web-sprint-challenge-applied-javascript.git"
   },
-  "jest":{
+  "jest": {
     "testEnvironment": "jsdom"
   }
 }
